--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -18,7 +18,11 @@
       <artifactId>commons-collections</artifactId>
       <version>20040616</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
