--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mark</groupId>
     <artifactId>javaee</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>javaee Maven Webapp</name>
+    <name>javaee</name>
     <url>http://maven.apache.org</url>
 
     <properties>
