--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <!-- MQ -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
